@@ -6,6 +6,6 @@ importFrom(graphics, hist, lines, image, rect, filled.contour, contour, persp, p
 importFrom(grDevices, as.raster, terrain.colors, heat.colors, col2rgb, rainbow, dev.flush, dev.off, dev.new, xy.coords, png)
 import(sp)
 exportClasses(Extent, BasicRaster, Raster, RasterLayer, RasterBrick, RasterStack, RasterStackBrick)
-exportMethods("[", "[[", "==", "!=", "!", adjacent, all.equal, Arith, approxNA, area, as.array, as.character, as.factor, as.vector, as.matrix, as.raster, atan2, bandnr,  bind, barplot, boundaries, boxplot, buffer, brick, calc, clamp, click, cellStats, clump, Compare, couldBeLonLat, cover, coordinates, contour, cut, crosstab, crop, crs, "crs<-", disaggregate, distance, direction, density, erase, extent, extract, extend, flip, focal, freq, getValues, getValuesBlock, geom, gridDistance, hasValues, hist, head, init, interpolate, intersect, image, is.factor, isLonLat, layerize, lines, log, Logic, levels, is.factor, as.factor, asFactor, mask, Math, Math2, mean, merge, mosaic, ncell, ncol, "ncol<-", nlayers, nrow, "nrow<-", overlay, origin, pairs, persp, plot, plotRGB, predict, raster, rasterize, ratify, reclassify, res, "res<-",  resample, rotate, "$", "$<-", sampleRandom, sampleRegular, sampleStratified, select, stackSelect, setMinMax, setValues, shift, stretch, spplot, subset, subs, summary, Summary, stack, t, tail, text, trim, unique, unstack, union, update, xmin, xmax, xres, ymin, ymax, yres, zonal, yFromRow, xFromCol,colFromX, rowFromY, cellFromXY, cellFromRowCol, cellFromRowColCombine, xyFromCell, yFromCell, xFromCell, rowColFromCell,rowFromCell, colFromCell, readStart, readStop,values, "values<-", weighted.mean, which.min, which.max, Which, writeStart, writeStop, writeValues, writeRaster, zonal, zoom, xmin, xmax, ymin, ymax, "xmin<-", "xmax<-", "ymin<-", "ymax<-")
+exportMethods("[", "[[", "==", "!=", "!", adjacent, all.equal, Arith, approxNA, area, as.array, as.character, as.factor, as.vector, as.matrix, as.raster, atan2, bandnr,  bind, barplot, boundaries, boxplot, buffer, brick, calc, clamp, click, cellStats, clump, Compare, couldBeLonLat, cover, coordinates, contour, cut, crosstab, crop, crs, "crs<-", disaggregate, distance, direction, density, erase, extent, extract, extend, flip, focal, freq, getValues, getValuesBlock, geom, gridDistance, hasValues, hist, head, init, interpolate, intersect, image, is.factor, isLonLat, layerize, lines, log, Logic, levels, is.factor, as.factor, asFactor, mask, Math, Math2, mean, merge, modal, mosaic, ncell, ncol, "ncol<-", nlayers, nrow, "nrow<-", overlay, origin, pairs, persp, plot, plotRGB, predict, quantile, raster, rasterize, ratify, reclassify, res, "res<-",  resample, rotate, "$", "$<-", sampleRandom, sampleRegular, sampleStratified, select, stackSelect, setMinMax, setValues, shift, stretch, spplot, subset, subs, summary, Summary, stack, t, tail, text, trim, unique, unstack, union, update, xmin, xmax, xres, ymin, ymax, yres, zonal, yFromRow, xFromCol,colFromX, rowFromY, cellFromXY, cellFromRowCol, cellFromRowColCombine, xyFromCell, yFromCell, xFromCell, rowColFromCell,rowFromCell, colFromCell, readStart, readStop,values, "values<-", weighted.mean, which.min, which.max, Which, writeStart, writeStop, writeValues, writeRaster, zonal, zoom, xmin, xmax, ymin, ymax, "xmin<-", "xmax<-", "ymin<-", "ymax<-")
 useDynLib(raster, .registration = TRUE)
 exportPattern("^[^\\.\\_]")
